<resources>
    <string name="app_name">AndroidAppTemplate</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>

    <string name="att_profile">Atualização de Usuário</string>
    <string name="profile_pic">Foto de perfil</string>
    <string name="name">Nome</string>
    <string name="email">Email</string>
    <string name="city">Cidade</string>
    <string name="endereco">Endereço</string>
    <string name="password">Senha</string>
    <string name="confirm_password">Confirmar Senha</string>
    <string name="att">Atualizar</string>
    <string name="out">Sair</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="user_cadastro">Cadastro de Usuário</string>
    <string name="login">Login</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="login_google">Login com Google</string>
    <string name="user_login">Login de Usuário</string>
    <string name="title_itens">Itens</string>

</resources>