<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ui.usuario.CadastroUsuarioActivity">

    <TextView
        android:id="@+id/textCadastroUsuarioTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/user_cadastro"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/registerNameEditText"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="@dimen/edit_text_height"
        android:hint="@string/name"
        android:autofillHints="name"
        android:inputType="text"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textCadastroUsuarioTitle"/>

    <EditText
        android:id="@+id/registerEmailEditText"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="@dimen/edit_text_height"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        app:layout_constraintTop_toBottomOf="@id/registerNameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/registerCidadeEditText"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginTop="44dp"
        android:hint="@string/city"
        android:inputType="text"
        android:autofillHints="address.city"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerEmailEditText" />

    <EditText
        android:id="@+id/registerPasswordEditText"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginTop="44dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerCidadeEditText" />

    <EditText
        android:id="@+id/registerConfirmPasswordEditText"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="@dimen/edit_text_height"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:autofillHints="password"
        app:layout_constraintTop_toBottomOf="@id/registerPasswordEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar"
        app:layout_constraintTop_toBottomOf="@id/registerConfirmPasswordEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/sairButton"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:text="@string/out"
        app:layout_constraintTop_toBottomOf="@id/registerButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>